<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LitCove</string>
    <string name="title_explore">Explore</string>
    <string name="title_my_book">My Book</string>
    <string name="title_profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_prompt">Don\'t have an account? <b><a href="litcove://register">Register now</a>!</b></string>
    <string name="login_prompt">Already have an account? <b><a href="litcove://login">Login now</a></b>!</string>
    <string name="forgot_password_prompt">Forgot Password? <b><a href="litcove://reset">Reset here</a>.</b></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tnc_prompt">By continuing, you agree to our <b><a href="litcove://tnc">Terms and Conditions</a></b> and <b><a href="litcove://privacy">Privacy Policy</a></b>.</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="app_icon">Application icon</string>
    <string name="web_client_id" tools:ignore="TypographyDashes">354015236284-5f205keat6pr0ndva64qv2ak36anlke2.apps.googleusercontent.com</string>
    <string name="error_registering_with_google">Error registering with Google</string>
    <string name="unexpected_type_of_credential">Unexpected type of credential</string>
    <string name="error_parsing_google_id_token">Error parsing Google ID token</string>
    <string name="authentication_successful">Authentication successful.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="setting">Setting</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="help_center">Help Center</string>
    <string name="faq">FAQ</string>
    <string name="bug_report">Bug Report</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_delete_your_account_this_action_cannot_be_undone">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="failed_to_delete_account">Failed to delete account.</string>
    <string name="account_deleted_successfully_theme_setting_cleared">Account deleted successfully. Theme setting cleared.</string>
    <string name="logged_out_successfully_theme_setting_cleared">Logged out successfully. Theme setting cleared.</string>
    <string name="recommendation">Recommendation</string>
    <string name="recommended_book_image">Recommended Book Image</string>
    <string name="joined_since">Joined since</string>
    <string name="book_cover">Book cover</string>
    <string name="enter">Enter</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="full_name">Full Name</string>
    <string name="submit">Submit</string>
    <string name="choose">Choose</string>
    <string name="your_interests">Your Interests</string>
    <string name="update">Update</string>
    <string name="your_profile">Your Profile</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="error_saving_interests">Error saving interests</string>
    <string name="interests_updated">Interests updated</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="name_saved">Name saved</string>
    <string name="error_saving_name">Error saving name</string>
    <string name="retry">Retry</string>
    <string name="error">Error</string>
    <string name="error_logging_in">Error logging in</string>
    <string name="login_successful">Login successful</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_must_be_at_least_8_characters_long">Password must be at least 8 characters long</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="book_details">Book Details</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="added_to_collection">Added to Collection</string>
    <string name="removed_from_collection">Removed from Collection</string>
    <string name="error_checking_book_in_collection">Error checking book in collection</string>
    <string name="error_adding_book_to_collection">Error adding book to collection</string>
    <string name="error_removing_book_from_collection">Error removing book from collection</string>
    <string name="added_to_history">Added to history</string>
    <string name="error_adding_book_to_history">Error adding book to history</string>
    <string name="search_hint">Search books by title, author, genre, and etc…</string>
    <string name="search">Search</string>
    <string name="searched_book_image">Searched Book Image</string>
    <string name="no_books_found">No books found</string>
    <string name="change_interests">Change Interests</string>
    <string name="select_at_least_one">Select at least one</string>
    <string name="change">Change</string>
    <string name="your_password">Your Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_must_be_different">New password must be different</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="failed_to_change_password">Failed to change password</string>
    <string name="reset">Reset</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="failed_to_send_password_reset_email">Failed to send password reset email</string>
    <string name="email_does_not_match_current_user_s_email">Email does not match current user\'s email</string>
</resources>