<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.litcove.litcove.ui.main.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" >

        <action
            android:id="@+id/actionExploreFragmentToBookDetailsFragment"
            app:destination="@id/navigation_details" />

        <action
            android:id="@+id/actionExploreFragmentToSearchFragment"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_book"
        android:name="com.litcove.litcove.ui.main.mybook.MyBookFragment"
        android:label="@string/title_my_book"
        tools:layout="@layout/fragment_my_book" >

        <action
            android:id="@+id/actionNavigationMyBookToDetailFragment"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.litcove.litcove.ui.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.litcove.litcove.ui.main.details.BookDetailsFragment"
        android:label="@string/book_details"
        tools:layout="@layout/fragment_book_details" >
        <argument
            android:name="book"
            app:argType="com.litcove.litcove.data.model.Book" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.litcove.litcove.ui.main.explore.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/actionSearchFragmentToBookDetailsFragment"
            app:destination="@id/navigation_details" />
    </fragment>
</navigation>