<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.InputNameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSurface"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/berkshire_swash_regular"
                android:text="@string/app_name"
                android:textColor="@color/litcovePrimary"
                android:textSize="32sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/labelUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/update"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelYourProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/your_profile"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelUpdate" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageAvatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            tools:src="@tools:sample/avatars"
            app:civ_border_color="?attr/colorOnSurfaceVariant"
            app:civ_border_width="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelYourProfile" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChangeAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:cornerRadius="10dp"
            android:paddingVertical="16dp"
            android:backgroundTint="?attr/colorSurface"
            app:strokeColor="?attr/colorOnSurfaceVariant"
            app:strokeWidth="2dp"
            android:text="@string/change_avatar"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/imageAvatar"
            app:layout_constraintStart_toEndOf="@id/imageAvatar"
            app:layout_constraintTop_toTopOf="@id/imageAvatar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            app:boxStrokeColor="@color/border_color"
            app:hintTextColor="@color/textColorLink"
            app:layout_constraintTop_toBottomOf="@id/imageAvatar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            app:cornerRadius="10dp"
            android:paddingVertical="16dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutFullName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>